Finally got everything working together. MY GOSH

--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:300,400|Ubuntu:400,300,500,700,300italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
+          <li><a href="">Home</a></li>
+          <li><a href="">Calender</a></li>
+          <li><a href="">News</a></li>
+          <li><a href="">About</a></li>
           <li><a href=""></a></li>
           <li><a href=""></a></li>
           <li><a href=""></a></li>
