--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,12 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="header-nav">
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">Calender</a></li>
           <li><a href="">News</a></li>
           <li><a href="">About</a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
-          <li><a href=""></a></li>
         </ul>
       </nav>
     </header>
