Work on header styling

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   </head>
   <body>
     <header>
+      <section class="header-section">
+      <img src="styles/fonts/icomoon/basketball-logo/svg/basketball.svg" alt="basketball logo"></img>
+      <h1>CB League</h1>
       <nav class="header-nav">
         <ul>
           <li><a href="">Home</a></li>
