--- a/public/index.html
+++ b/public/index.html
@@ -12,24 +12,29 @@
   <body>
     <header>
       <section class="header-section">
-      <img src="styles/fonts/icomoon/basketball-logo/svg/basketball.svg" alt="basketball logo"></img>
-      <h1>CB League</h1>
+        <section class="logo-header">
+          <img src="styles/fonts/icomoon/basketball-logo/svg/basketball.svg" alt="basketball logo"></img>
+          <h1>CB League</h1>
+        </section>
+      <section class="nav-section">    
       <nav class="header-nav">
         <ul>
           <li><a ui-sref="home">Home</a></li>
           <li><a href="">Calender</a></li>
           <li><a href="">News</a></li>
           <li><a href="">About</a></li>
-          <li data-ng-if="isAdmin"><a ui-sref="admin">Admin</a></li>
         </ul>
       </nav>
-      <section>
-        <a ui-sref="signin" data-ng-if="!isLoggedIn">SignIn</a>
-        <a ui-sref="signup" data-ng-if="!isLoggedIn">SignUp</a>
-        <p data-ng-if="isLoggedIn">Hi, {{loggedUser}} </p>
-        <a href ng-click="logOut()" data-ng-if="isLoggedIn">LogOut</a>
-      </section>
+    </section>
+  </section>
     </header>
+   <section>
+      <p data-ng-if="isAdmin"><a ui-sref="admin">Admin</a></p>
+      <a ui-sref="signin" data-ng-if="!isLoggedIn">SignIn</a>
+      <a ui-sref="signup" data-ng-if="!isLoggedIn">SignUp</a>
+      <p data-ng-if="isLoggedIn">Hi, {{loggedUser}} </p>
+      <a href ng-click="logOut()" data-ng-if="isLoggedIn">LogOut</a>  
+    </section>
     <main ui-view>
     </main>
     <section class="contact">
