--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     </section>
     <main ui-view>
     </main>
-    <footer>
+    <footer class="home-footer">
       <!-- <section class="contact">
       <div class="contact_info">
         <p>Phone Number: (111)-111-1111</p>
