remove unused code

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       <p data-ng-if="isLoggedIn">Hi, {{loggedUser}} </p>
       <a href="" ng-click="logOut()" data-ng-if="isLoggedIn">LogOut</a>  
     </section>
-    <main class="main" ui-view>
+    <main ui-view>
     </main>
     <footer class="home-footer">
       <!-- <section class="contact">
