signin-signup complete, other partails in progress, other included partials are placeholders only

--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,8 @@
       </ul>  -->
       <nav class="header-nav footer-nav">
         <ul>
-          <li><strong><span class="contact-info">Phone Number :</strong> (111)-111-1111</span></li>
-          <li><strong><span class="contact-info">Email address :</strong> cbleague@gmail.com</span></li>
+          <li><strong><span class="contact-info">Phone Number :</strong> (+38) 0936-522-322</span></li>
+          <li><strong><span class="contact-info">Email address :</strong> chbl.org@gmail.com</span></li>
         </ul>
       </nav>
       <nav class="header-nav footer-nav">
