--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <div data-ng-if="alerts.exists" data-ng-class="alerts.type">{{alerts.msg}}</div>
-    <div data-ng-if="busy">Please Put something here</div>
+    <div data-ng-if="busy">Please Wait</div>
     <header>
       <section class="header-section">
         <section class="logo-header">
           <img src="styles/fonts/icomoon/basketball-logo/svg/basketball.svg" alt="basketball logo"/>
-          <h1 class="header-style">CB League</h1>
+          <h1 class="header-style"><a class="header-link" ui-sref="home">CB League</a></h1>
         </section>
       <section class="nav-section">    
       <nav class="header-nav header-style">
