Finish footer for mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body>
-    <div id="square" data-ng-class="alerts.type">Temp msg</div>
+   <!--  <div id="square" data-ng-class="alerts.type">Temp msg</div> -->
     <div data-ng-if="busy">Please Put something here</div>
     <header>
       <section class="header-section">
